--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ footer {
 <body>
 
 <header>
-    <img src="https://www.linkedin.com/dms/prv/image/v2/D4E06AQHrYw2jNqueTA/messaging-image-720/B4EZwVQym5GoAY-/0/1769883250840?m=AQK2niK_tFekKwAAAZwVQz7Gb5EgN9rOn-ZnzdDTPWFL7yho4YlxNsSZOw&ne=1&v=beta&t=VOv_Gw7Ixr89aXFawWXgRHCU-itobjRpos4ZHYKUKdI">
+    <img src="https://files.fm/u/vqhxagtq7p">
     <div>
         <h1>Luis Carlos R. dos Anjos</h1>
         <h2>Desenvolvedor de Software</h2>
