--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ footer {
 <body>
 
 <header>
-    <img src="https://files.fm/u/vqhxagtq7p">
+    <img src="eu.png">
     <div>
         <h1>Luis Carlos R. dos Anjos</h1>
         <h2>Desenvolvedor de Software</h2>
