--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- isso é necessario para que fique responsivo no cell da mesma maneira que é no computador -->
 <title>Portfólio - Luis Carlos</title>
 
 <style>
