Add h2 styling with color #7dd3fc

--- a/index.html
+++ b/index.html
@@ -429,6 +429,10 @@ footer {
         padding: 0;
     }
 
+    h2{
+         color: #7dd3fc;
+    }
+
     header {
         margin: 0 auto;
         width: 100%;
