Update social links in index.html

--- a/index.html
+++ b/index.html
@@ -786,9 +786,10 @@
         </div>
          <div class="nav-geral">
 
-            <a href="https://www.linkedin.com/in/luis-carlos-eng-comp/" target="_blank" class="btn-social tab">Linkedin → </a> 
-            <a href="https://wa.me/5585988438013" target="_blank" class="btn-social tab">WhatsApp → </a>
-            <a href="mailto:luiscarlosengcomp@gmail.com" target="_blank" class="btn-social tab">Email →</a>
+            <a href="https://www.linkedin.com/in/luis-carlos-eng-comp/" target="_blank" class="btn-social tab">Linkedin</a> 
+            <a href="https://wa.me/5585988438013" target="_blank" class="btn-social tab">WhatsApp</a>
+            <a href="mailto:luiscarlosengcomp@gmail.com" target="_blank" class="btn-social tab">Email</a>
+            <a href="https://github.com/luiscarlo5" target="_blank" class="btn-social tab">GitHub</a>
         </div>
         
     </header>
